--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,13 @@ body {
 	padding-top: 60px;
 }
 
-.movie-suggestion {
+.movie-suggestion, .person-suggestion {
 	padding: 10px 20px;
 	float: left;
 	width: 200px;
 	height: 200px;
-	border: 1px solid black;
 }
 
-.poster {
+.poster, .profile {
 	width: 80px;
 }
