Did some work on the history took out cardStacked and just need to work on the flow of movies ect.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,9 @@ h3 {
 #my-modal-actor, #my-modal-movie {
 	color: black;
 }
+#search-history {
+	padding: 10px 20px;
+}
 
 /*.main-movie-content {
 	color: black;
