--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,8 +39,9 @@ h3 {
 #my-modal-actor, #my-modal-movie {
 	color: black;
 }
-#search-history {
-	padding: 10px 20px;
+.small-poster {
+	height: 148px;
+	width: 100px;
 }
 
 /*.main-movie-content {
