set search error messages as a toast instead of alert

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,11 @@ ul.dropdown-content {
 	.responsive-img{width: 100%;}
 	body{width: 100%;}
 }
+
+/* Custom position for toast message */
+#toast-container {
+  top: auto !important;
+  left: auto !important;
+  bottom: 80%;
+  right:0%;
+}
