--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,14 @@ h3 {
 	text-shadow: black 0.1em 0.1em 0.2em;
 }
 
+#TMDb-logo {
+	height: 30px !important;
+	width: auto;
+}
+
+#tmdb-credit {
+	color: #081c24;
+}
 .collapsible {
 	clear: both;
 	border: 0px;
@@ -18,7 +26,7 @@ h3 {
 }
 
 .btn {
-	background: #B82601;
+	background: #bf360c;
 }
 
 .movie-suggestion, .person-suggestion {
@@ -54,6 +62,7 @@ h3 {
 
 ul.dropdown-content {
 	margin-top: 10px;
+	overflow-y: auto;
 }
 
 @media screen and (max-width: 600px){
