--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,3 +77,14 @@ ul.dropdown-content {
   bottom: 80%;
   right:0%;
 }
+
+body {
+display: flex;
+min-height: 100vh;
+flex-direction: column;
+}
+
+main {
+flex: 1 0 auto;
+}
+    
